# kb-mcp

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/truncated-results/: 1782532472335-ebaa55a6-run_command.txt
docs/: architecture.md  cli-reference.md  code-review-wave-1.md  code-review-wave-2a-3.md  plan.md  quickstart.md  requirements.md  v0.2-plan.md
examples/: README.md  claude-desktop-config.json  cursor-config.json  python-mcp-client.py
src/kb_mcp/: __init__.py  cli.py  embedder.py  mcp_server.py  md_io.py  migrations.py  schema.py  store.py  stub_store.py
src/kb_mcp/store/: __init__.py  sqlite.py
src/kb_mcp_lite/: __init__.py  admin.py  cli.py  config.py  embedder.py  mcp_server.py  md_io.py  migrations.py  schema.py  store.py  stub_store.py  vault.py  vault.py.bak
src/kb_mcp_lite/admin/: __init__.py  _helpers.py  routes_docs.py  routes_meta.py
src/kb_mcp_lite/migrations/: 0001_init.sql  0002_trgm.sql  0003_vec.sql  0004_audit.sql  0005_aliases.sql
src/kb_mcp_lite/static/: admin.css
src/kb_mcp_lite/store/: __init__.py  embedding.py  maintenance.py  search.py  sqlite.py  versioning.py
src/kb_mcp_lite/templates/admin/: base.html  document_form.html  documents.html  graph.html  imports.html  links.html  overview.html  search.html  settings.html
tests/: test_admin.py  test_cli_sqlite.py  test_cli_stub.py  test_config.py  test_embedder.py  test_imports.py  test_mcp_e2e.py  test_md_io.py  test_placeholder.py  test_reindex_embeddings.py  test_search_fuzzy.py  test_search_semantic.py  test_similarity.py  test_slugify_cjk.py  test_store_sqlite.py  test_vault.py
