[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-mcp"
version = "0.1.0"
description = "Agent-native knowledge base. SQLite + FTS5 + MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kb-mcp contributors" }]
keywords = ["knowledge-base", "mcp", "agent", "sqlite", "fts5"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.5",
  "mcp>=1.0",
  "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
kb = "kb_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/zhangbei/kb-mcp"
Source = "https://github.com/zhangbei/kb-mcp"
Issues = "https://github.com/zhangbei/kb-mcp/issues"
Changelog = "https://github.com/zhangbei/kb-mcp/releases"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
