[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-mcp-lite"
version = "0.2.5"
description = "Lightweight agent-native knowledge base. SQLite + FTS5 + vec0 + MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HelloTomBruce (Zhang Bei)" }]
keywords = [
  "knowledge-base",
  "mcp",
  "agent",
  "sqlite",
  "fts5",
  "vector-search",
  "semantic-search",
  "lightweight",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.5",
  "mcp>=1.0",
  "python-frontmatter>=1.0",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# vec: install for semantic search (vec0 + pysqlite3). pysqlite3
# ships precompiled wheels for Linux x86_64/arm64 and macOS x86_64
# /arm64; it provides a SQLite build with extension support (which
# the stdlib ``sqlite3`` lacks on Python 3.12+). Without this extra
# the package still works — semantic search is silently disabled.
vec = [
  "sqlite-vec>=0.1.0",
  "pysqlite3>=0.5",
]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
kb = "kb_mcp_lite.cli:main"

[project.urls]
Homepage = "https://github.com/HelloTomBruce/kb-mcp-lite"
Source = "https://github.com/HelloTomBruce/kb-mcp-lite"
Issues = "https://github.com/HelloTomBruce/kb-mcp-lite/issues"
Changelog = "https://github.com/HelloTomBruce/kb-mcp-lite/releases"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools.package-data]
"kb_mcp_lite" = [
  "migrations/*.sql",
  "templates/admin/*.html",
  "static/*.css",
]  # Runtime assets
